static/Common/Create_VPC_Stack/Code/workload-account.template
{
    "Resources": {
      "VPCB9E5F0B4": {
        "Type": "AWS::EC2::VPC",
        "Properties": {
          "CidrBlock": "10.0.0.0/16",
          "EnableDnsHostnames": true,
          "EnableDnsSupport": true,
          "InstanceTenancy": "default",
          "Tags": [
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/Resource"
        }
      },
      "VPCPublicSubnet1SubnetB4246D30": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "CidrBlock": "10.0.0.0/18",
          "VpcId": {
            "Ref": "VPCB9E5F0B4"
          },
          "AvailabilityZone": {
            "Fn::Select": [
              0,
              {
                "Fn::GetAZs": ""
              }
            ]
          },
          "MapPublicIpOnLaunch": true,
          "Tags": [
            {
              "Key": "aws-cdk:subnet-name",
              "Value": "Public"
            },
            {
              "Key": "aws-cdk:subnet-type",
              "Value": "Public"
            },
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC/PublicSubnet1"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PublicSubnet1/Subnet"
        }
      },
      "VPCPublicSubnet1RouteTableFEE4B781": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "VPCB9E5F0B4"
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC/PublicSubnet1"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PublicSubnet1/RouteTable"
        }
      },
      "VPCPublicSubnet1RouteTableAssociation0B0896DC": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "RouteTableId": {
            "Ref": "VPCPublicSubnet1RouteTableFEE4B781"
          },
          "SubnetId": {
            "Ref": "VPCPublicSubnet1SubnetB4246D30"
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PublicSubnet1/RouteTableAssociation"
        }
      },
      "VPCPublicSubnet1DefaultRoute91CEF279": {
        "Type": "AWS::EC2::Route",
        "Properties": {
          "RouteTableId": {
            "Ref": "VPCPublicSubnet1RouteTableFEE4B781"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": {
            "Ref": "VPCIGWB7E252D3"
          }
        },
        "DependsOn": [
          "VPCVPCGW99B986DC"
        ],
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PublicSubnet1/DefaultRoute"
        }
      },
      "VPCPublicSubnet1EIP6AD938E8": {
        "Type": "AWS::EC2::EIP",
        "Properties": {
          "Domain": "vpc",
          "Tags": [
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC/PublicSubnet1"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PublicSubnet1/EIP"
        }
      },
      "VPCPublicSubnet1NATGatewayE0556630": {
        "Type": "AWS::EC2::NatGateway",
        "Properties": {
          "AllocationId": {
            "Fn::GetAtt": [
              "VPCPublicSubnet1EIP6AD938E8",
              "AllocationId"
            ]
          },
          "SubnetId": {
            "Ref": "VPCPublicSubnet1SubnetB4246D30"
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC/PublicSubnet1"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PublicSubnet1/NATGateway"
        }
      },
      "VPCPublicSubnet2Subnet74179F39": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "CidrBlock": "10.0.64.0/18",
          "VpcId": {
            "Ref": "VPCB9E5F0B4"
          },
          "AvailabilityZone": {
            "Fn::Select": [
              1,
              {
                "Fn::GetAZs": ""
              }
            ]
          },
          "MapPublicIpOnLaunch": true,
          "Tags": [
            {
              "Key": "aws-cdk:subnet-name",
              "Value": "Public"
            },
            {
              "Key": "aws-cdk:subnet-type",
              "Value": "Public"
            },
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC/PublicSubnet2"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PublicSubnet2/Subnet"
        }
      },
      "VPCPublicSubnet2RouteTable6F1A15F1": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "VPCB9E5F0B4"
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC/PublicSubnet2"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PublicSubnet2/RouteTable"
        }
      },
      "VPCPublicSubnet2RouteTableAssociation5A808732": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "RouteTableId": {
            "Ref": "VPCPublicSubnet2RouteTable6F1A15F1"
          },
          "SubnetId": {
            "Ref": "VPCPublicSubnet2Subnet74179F39"
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PublicSubnet2/RouteTableAssociation"
        }
      },
      "VPCPublicSubnet2DefaultRouteB7481BBA": {
        "Type": "AWS::EC2::Route",
        "Properties": {
          "RouteTableId": {
            "Ref": "VPCPublicSubnet2RouteTable6F1A15F1"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": {
            "Ref": "VPCIGWB7E252D3"
          }
        },
        "DependsOn": [
          "VPCVPCGW99B986DC"
        ],
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PublicSubnet2/DefaultRoute"
        }
      },
      "VPCPublicSubnet2EIP4947BC00": {
        "Type": "AWS::EC2::EIP",
        "Properties": {
          "Domain": "vpc",
          "Tags": [
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC/PublicSubnet2"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PublicSubnet2/EIP"
        }
      },
      "VPCPublicSubnet2NATGateway3C070193": {
        "Type": "AWS::EC2::NatGateway",
        "Properties": {
          "AllocationId": {
            "Fn::GetAtt": [
              "VPCPublicSubnet2EIP4947BC00",
              "AllocationId"
            ]
          },
          "SubnetId": {
            "Ref": "VPCPublicSubnet2Subnet74179F39"
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC/PublicSubnet2"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PublicSubnet2/NATGateway"
        }
      },
      "VPCPrivateSubnet1Subnet8BCA10E0": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "CidrBlock": "10.0.128.0/18",
          "VpcId": {
            "Ref": "VPCB9E5F0B4"
          },
          "AvailabilityZone": {
            "Fn::Select": [
              0,
              {
                "Fn::GetAZs": ""
              }
            ]
          },
          "MapPublicIpOnLaunch": false,
          "Tags": [
            {
              "Key": "aws-cdk:subnet-name",
              "Value": "Private"
            },
            {
              "Key": "aws-cdk:subnet-type",
              "Value": "Private"
            },
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC/PrivateSubnet1"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PrivateSubnet1/Subnet"
        }
      },
      "VPCPrivateSubnet1RouteTableBE8A6027": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "VPCB9E5F0B4"
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC/PrivateSubnet1"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PrivateSubnet1/RouteTable"
        }
      },
      "VPCPrivateSubnet1RouteTableAssociation347902D1": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "RouteTableId": {
            "Ref": "VPCPrivateSubnet1RouteTableBE8A6027"
          },
          "SubnetId": {
            "Ref": "VPCPrivateSubnet1Subnet8BCA10E0"
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PrivateSubnet1/RouteTableAssociation"
        }
      },
      "VPCPrivateSubnet1DefaultRouteAE1D6490": {
        "Type": "AWS::EC2::Route",
        "Properties": {
          "RouteTableId": {
            "Ref": "VPCPrivateSubnet1RouteTableBE8A6027"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "NatGatewayId": {
            "Ref": "VPCPublicSubnet1NATGatewayE0556630"
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PrivateSubnet1/DefaultRoute"
        }
      },
      "VPCPrivateSubnet2SubnetCFCDAA7A": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "CidrBlock": "10.0.192.0/18",
          "VpcId": {
            "Ref": "VPCB9E5F0B4"
          },
          "AvailabilityZone": {
            "Fn::Select": [
              1,
              {
                "Fn::GetAZs": ""
              }
            ]
          },
          "MapPublicIpOnLaunch": false,
          "Tags": [
            {
              "Key": "aws-cdk:subnet-name",
              "Value": "Private"
            },
            {
              "Key": "aws-cdk:subnet-type",
              "Value": "Private"
            },
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC/PrivateSubnet2"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PrivateSubnet2/Subnet"
        }
      },
      "VPCPrivateSubnet2RouteTable0A19E10E": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "VPCB9E5F0B4"
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC/PrivateSubnet2"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PrivateSubnet2/RouteTable"
        }
      },
      "VPCPrivateSubnet2RouteTableAssociation0C73D413": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "RouteTableId": {
            "Ref": "VPCPrivateSubnet2RouteTable0A19E10E"
          },
          "SubnetId": {
            "Ref": "VPCPrivateSubnet2SubnetCFCDAA7A"
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PrivateSubnet2/RouteTableAssociation"
        }
      },
      "VPCPrivateSubnet2DefaultRouteF4F5CFD2": {
        "Type": "AWS::EC2::Route",
        "Properties": {
          "RouteTableId": {
            "Ref": "VPCPrivateSubnet2RouteTable0A19E10E"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "NatGatewayId": {
            "Ref": "VPCPublicSubnet2NATGateway3C070193"
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/PrivateSubnet2/DefaultRoute"
        }
      },
      "VPCIGWB7E252D3": {
        "Type": "AWS::EC2::InternetGateway",
        "Properties": {
          "Tags": [
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/IGW"
        }
      },
      "VPCVPCGW99B986DC": {
        "Type": "AWS::EC2::VPCGatewayAttachment",
        "Properties": {
          "VpcId": {
            "Ref": "VPCB9E5F0B4"
          },
          "InternetGatewayId": {
            "Ref": "VPCIGWB7E252D3"
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/VPCGW"
        }
      },
      "VPCFlowLogIAMRole5B117089": {
        "Type": "AWS::IAM::Role",
        "Properties": {
          "AssumeRolePolicyDocument": {
            "Statement": [
              {
                "Action": "sts:AssumeRole",
                "Effect": "Allow",
                "Principal": {
                  "Service": "vpc-flow-logs.amazonaws.com"
                }
              }
            ],
            "Version": "2012-10-17"
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/VPC"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/FlowLog/IAMRole/Resource"
        }
      },
      "VPCFlowLogIAMRoleDefaultPolicyC7E244A8": {
        "Type": "AWS::IAM::Policy",
        "Properties": {
          "PolicyDocument": {
            "Statement": [
              {
                "Action": [
                  "logs:CreateLogStream",
                  "logs:PutLogEvents",
                  "logs:DescribeLogStreams"
                ],
                "Effect": "Allow",
                "Resource": {
                  "Fn::GetAtt": [
                    "VPCFlowLogLogGroup03CD7A70",
                    "Arn"
                  ]
                }
              },
              {
                "Action": "iam:PassRole",
                "Effect": "Allow",
                "Resource": {
                  "Fn::GetAtt": [
                    "VPCFlowLogIAMRole5B117089",
                    "Arn"
                  ]
                }
              }
            ],
            "Version": "2012-10-17"
          },
          "PolicyName": "VPCFlowLogIAMRoleDefaultPolicyC7E244A8",
          "Roles": [
            {
              "Ref": "VPCFlowLogIAMRole5B117089"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/FlowLog/IAMRole/DefaultPolicy/Resource"
        }
      },
      "VPCFlowLogLogGroup03CD7A70": {
        "Type": "AWS::Logs::LogGroup",
        "Properties": {
          "RetentionInDays": 731
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/FlowLog/LogGroup/Resource"
        }
      },
      "VPCFlowLog260B0A6D": {
        "Type": "AWS::EC2::FlowLog",
        "Properties": {
          "ResourceId": {
            "Ref": "VPCB9E5F0B4"
          },
          "ResourceType": "VPC",
          "TrafficType": "ALL",
          "DeliverLogsPermissionArn": {
            "Fn::GetAtt": [
              "VPCFlowLogIAMRole5B117089",
              "Arn"
            ]
          },
          "LogDestinationType": "cloud-watch-logs",
          "LogGroupName": {
            "Ref": "VPCFlowLogLogGroup03CD7A70"
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/VPC/FlowLog/FlowLog"
        }
      },
      "DatabaseSecurityGroup7319C0F6": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupDescription": "Allow ssh access to db instances",
          "SecurityGroupEgress": [
            {
              "CidrIp": "0.0.0.0/0",
              "Description": "Allow all outbound traffic by default",
              "IpProtocol": "-1"
            }
          ],
          "SecurityGroupIngress": [
            {
              "CidrIp": "0.0.0.0/0",
              "Description": "from 0.0.0.0/0:3306",
              "FromPort": 3306,
              "IpProtocol": "tcp",
              "ToPort": 3306
            }
          ],
          "VpcId": {
            "Ref": "VPCB9E5F0B4"
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/DatabaseSecurityGroup/Resource"
        }
      },
      "DatabaseSecurityGroupfrom00000IndirectPort16BA9BCA": {
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
          "IpProtocol": "tcp",
          "CidrIp": "0.0.0.0/0",
          "Description": "from 0.0.0.0/0:{IndirectPort}",
          "FromPort": {
            "Fn::GetAtt": [
              "InstanceC1063A87",
              "Endpoint.Port"
            ]
          },
          "GroupId": {
            "Fn::GetAtt": [
              "DatabaseSecurityGroup7319C0F6",
              "GroupId"
            ]
          },
          "ToPort": {
            "Fn::GetAtt": [
              "InstanceC1063A87",
              "Endpoint.Port"
            ]
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/DatabaseSecurityGroup/from 0.0.0.0_0:{IndirectPort}"
        }
      },
      "ASGInstanceSecurityGroup0525485D": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupDescription": "WellArchitectedLabsStack/ASG/InstanceSecurityGroup",
          "SecurityGroupEgress": [
            {
              "CidrIp": "0.0.0.0/0",
              "Description": "Allow all outbound traffic by default",
              "IpProtocol": "-1"
            }
          ],
          "VpcId": {
            "Ref": "VPCB9E5F0B4"
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/ASG/InstanceSecurityGroup/Resource"
        }
      },
      "ASGInstanceSecurityGroupfromWellArchitectedLabsStackLBSecurityGroup4680CF06806E968CDE": {
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
          "IpProtocol": "tcp",
          "Description": "Load balancer to target",
          "FromPort": 80,
          "GroupId": {
            "Fn::GetAtt": [
              "ASGInstanceSecurityGroup0525485D",
              "GroupId"
            ]
          },
          "SourceSecurityGroupId": {
            "Fn::GetAtt": [
              "LBSecurityGroup8A41EA2B",
              "GroupId"
            ]
          },
          "ToPort": 80
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/ASG/InstanceSecurityGroup/from WellArchitectedLabsStackLBSecurityGroup4680CF06:80"
        }
      },
      "ASGInstanceRoleE263A41B": {
        "Type": "AWS::IAM::Role",
        "Properties": {
          "AssumeRolePolicyDocument": {
            "Statement": [
              {
                "Action": "sts:AssumeRole",
                "Effect": "Allow",
                "Principal": {
                  "Service": {
                    "Fn::Join": [
                      "",
                      [
                        "ec2.",
                        {
                          "Ref": "AWS::URLSuffix"
                        }
                      ]
                    ]
                  }
                }
              }
            ],
            "Version": "2012-10-17"
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": "WellArchitectedLabsStack/ASG"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/ASG/InstanceRole/Resource"
        }
      },
      "ASGInstanceProfile0A2834D7": {
        "Type": "AWS::IAM::InstanceProfile",
        "Properties": {
          "Roles": [
            {
              "Ref": "ASGInstanceRoleE263A41B"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/ASG/InstanceProfile"
        }
      },
      "ASGLaunchConfigC00AF12B": {
        "Type": "AWS::AutoScaling::LaunchConfiguration",
        "Properties": {
          "ImageId": {
            "Fn::FindInMap": [
              "AWSRegionVirt2AMI",
              {
                "Ref": "AWS::Region"
              },
              {
                "Fn::FindInMap": [
                  "AWSInstanceType2Virt",
                  {
                    "Fn::FindInMap": [
                      "instancesTypes",
                      "Demo",
                      "INST"
                    ]
                  },
                  "Virt"
                ]
              }
            ]
          },
          "InstanceType": "t2.micro",
          "IamInstanceProfile": {
            "Ref": "ASGInstanceProfile0A2834D7"
          },
          "SecurityGroups": [
            {
              "Fn::GetAtt": [
                "ASGInstanceSecurityGroup0525485D",
                "GroupId"
              ]
            }
          ],
          "UserData": {
            "Fn::Base64": "#include https://s3.amazonaws.com/immersionday-labs/bootstrap.sh"
          }
        },
        "DependsOn": [
          "ASGInstanceRoleE263A41B"
        ],
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/ASG/LaunchConfig"
        }
      },
      "ASG46ED3070": {
        "Type": "AWS::AutoScaling::AutoScalingGroup",
        "Properties": {
          "MaxSize": "4",
          "MinSize": "2",
          "LaunchConfigurationName": {
            "Ref": "ASGLaunchConfigC00AF12B"
          },
          "Tags": [
            {
              "Key": "Name",
              "PropagateAtLaunch": true,
              "Value": "WellArchitectedLabsStack/ASG"
            }
          ],
          "TargetGroupARNs": [
            {
              "Ref": "LBListenerTargetGroupF04FCF6D"
            }
          ],
          "VPCZoneIdentifier": [
            {
              "Ref": "VPCPrivateSubnet1Subnet8BCA10E0"
            },
            {
              "Ref": "VPCPrivateSubnet2SubnetCFCDAA7A"
            }
          ]
        },
        "UpdatePolicy": {
          "AutoScalingScheduledAction": {
            "IgnoreUnmodifiedGroupSizeProperties": true
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/ASG/ASG"
        }
      },
      "CURmaster": {
        "Type": "AWS::S3::Bucket",
        "Properties": {
          "BucketName" : {
            "Fn::Join": [
              "-",
              ["curmaster-war-workshop-",{"Ref": "AWS::AccountId"}]]
          }  
        },
        "UpdateReplacePolicy": "Delete",
        "DeletionPolicy": "Delete"
      },
      "ASGScalingPolicyAModestLoadC5714E5A": {
        "Type": "AWS::AutoScaling::ScalingPolicy",
        "Properties": {
          "AutoScalingGroupName": {
            "Ref": "ASG46ED3070"
          },
          "PolicyType": "TargetTrackingScaling",
          "TargetTrackingConfiguration": {
            "PredefinedMetricSpecification": {
              "PredefinedMetricType": "ALBRequestCountPerTarget",
              "ResourceLabel": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::Select": [
                        1,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Ref": "LBListener49E825B4"
                            }
                          ]
                        }
                      ]
                    },
                    "/",
                    {
                      "Fn::Select": [
                        2,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Ref": "LBListener49E825B4"
                            }
                          ]
                        }
                      ]
                    },
                    "/",
                    {
                      "Fn::Select": [
                        3,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Ref": "LBListener49E825B4"
                            }
                          ]
                        }
                      ]
                    },
                    "/",
                    {
                      "Fn::GetAtt": [
                        "LBListenerTargetGroupF04FCF6D",
                        "TargetGroupFullName"
                      ]
                    }
                  ]
                ]
              }
            },
            "TargetValue": 1
          }
        },
        "DependsOn": [
          "LBListener49E825B4",
          "LBListenerTargetGroupF04FCF6D"
        ],
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/ASG/ScalingPolicyAModestLoad/Resource"
        }
      },
      "LB8A12904C": {
        "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
        "Properties": {
          "Scheme": "internet-facing",
          "SecurityGroups": [
            {
              "Fn::GetAtt": [
                "LBSecurityGroup8A41EA2B",
                "GroupId"
              ]
            }
          ],
          "Subnets": [
            {
              "Ref": "VPCPublicSubnet1SubnetB4246D30"
            },
            {
              "Ref": "VPCPublicSubnet2Subnet74179F39"
            }
          ],
          "Type": "application"
        },
        "DependsOn": [
          "VPCPublicSubnet1DefaultRoute91CEF279",
          "VPCPublicSubnet2DefaultRouteB7481BBA"
        ],
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/LB/Resource"
        }
      },
      "LBSecurityGroup8A41EA2B": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupDescription": "Automatically created Security Group for ELB WellArchitectedLabsStackLB19E5761A",
          "SecurityGroupIngress": [
            {
              "CidrIp": "0.0.0.0/0",
              "Description": "Allow from anyone on port 80",
              "FromPort": 80,
              "IpProtocol": "tcp",
              "ToPort": 80
            }
          ],
          "VpcId": {
            "Ref": "VPCB9E5F0B4"
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/LB/SecurityGroup/Resource"
        }
      },
      "LBSecurityGrouptoWellArchitectedLabsStackASGInstanceSecurityGroup9D3F452F80F1FEE5A2": {
        "Type": "AWS::EC2::SecurityGroupEgress",
        "Properties": {
          "GroupId": {
            "Fn::GetAtt": [
              "LBSecurityGroup8A41EA2B",
              "GroupId"
            ]
          },
          "IpProtocol": "tcp",
          "Description": "Load balancer to target",
          "DestinationSecurityGroupId": {
            "Fn::GetAtt": [
              "ASGInstanceSecurityGroup0525485D",
              "GroupId"
            ]
          },
          "FromPort": 80,
          "ToPort": 80
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/LB/SecurityGroup/to WellArchitectedLabsStackASGInstanceSecurityGroup9D3F452F:80"
        }
      },
      "LBListener49E825B4": {
        "Type": "AWS::ElasticLoadBalancingV2::Listener",
        "Properties": {
          "DefaultActions": [
            {
              "TargetGroupArn": {
                "Ref": "LBListenerTargetGroupF04FCF6D"
              },
              "Type": "forward"
            }
          ],
          "LoadBalancerArn": {
            "Ref": "LB8A12904C"
          },
          "Port": 80,
          "Protocol": "HTTP"
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/LB/Listener/Resource"
        }
      },
      "LBListenerTargetGroupF04FCF6D": {
        "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
        "Properties": {
          "Port": 80,
          "Protocol": "HTTP",
          "TargetType": "instance",
          "TargetGroupAttributes" : [ 
            {
              "Key":"stickiness.enabled",
              "Value": true
            },
            {
              "Key": "stickiness.lb_cookie.duration_seconds",
              "Value": 60
            }
          ],
          "VpcId": {
            "Ref": "VPCB9E5F0B4"
          }
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/LB/Listener/TargetGroup/Resource"
        }
      },
      "InstanceSubnetGroupF2CBA54F": {
        "Type": "AWS::RDS::DBSubnetGroup",
        "Properties": {
          "DBSubnetGroupDescription": "Subnet group for Instance database",
          "SubnetIds": [
            {
              "Ref": "VPCPrivateSubnet1Subnet8BCA10E0"
            },
            {
              "Ref": "VPCPrivateSubnet2SubnetCFCDAA7A"
            }
          ]
        },
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/Instance/SubnetGroup"
        }
      },
      "InstanceC1063A87": {
        "Type": "AWS::RDS::DBInstance",
        "Properties": {
          "DBInstanceClass": "db.t2.small",
          "AllocatedStorage": "100",
          "CopyTagsToSnapshot": false,
          "DBName": "rdscluster",
          "DBSubnetGroupName": {
            "Ref": "InstanceSubnetGroupF2CBA54F"
          },
          "DeleteAutomatedBackups": false,
          "DeletionProtection": false,
          "Engine": "mysql",
          "MasterUsername": "awsuser",
          "MasterUserPassword": "awspassword",
          "StorageType": "gp2",
          "VPCSecurityGroups": [
            {
              "Fn::GetAtt": [
                "DatabaseSecurityGroup7319C0F6",
                "GroupId"
              ]
            }
          ]
        },
        "UpdateReplacePolicy": "Delete",
        "Metadata": {
          "aws:cdk:path": "WellArchitectedLabsStack/Instance/Resource"
        }
      },
      "CDKMetadata": {
        "Type": "AWS::CDK::Metadata",
        "Properties": {
          "Modules": "aws-cdk=1.42.1,@aws-cdk/assets=1.42.1,@aws-cdk/aws-autoscaling=1.42.1,@aws-cdk/aws-autoscaling-common=1.42.1,@aws-cdk/aws-cloudwatch=1.42.1,@aws-cdk/aws-ec2=1.42.1,@aws-cdk/aws-elasticloadbalancingv2=1.42.1,@aws-cdk/aws-events=1.42.1,@aws-cdk/aws-iam=1.42.1,@aws-cdk/aws-kms=1.42.1,@aws-cdk/aws-lambda=1.42.1,@aws-cdk/aws-logs=1.42.1,@aws-cdk/aws-rds=1.42.1,@aws-cdk/aws-s3=1.42.1,@aws-cdk/aws-s3-assets=1.42.1,@aws-cdk/aws-sam=1.42.1,@aws-cdk/aws-secretsmanager=1.42.1,@aws-cdk [...]
        },
        "Condition": "CDKMetadataAvailable"
      }
    },
    "Mappings": {
      "VPCIpSpace": {
        "us-east-1": {
          "RANGE": "10.42"
        },
        "us-east-2": {
          "RANGE": "10.43"
        },
        "us-west-2": {
          "RANGE": "10.42"
        },
        "us-west-1": {
          "RANGE": "10.43"
        },
        "ap-northeast-1": {
          "RANGE": "10.42"
        },
        "ap-northeast-2": {
          "RANGE": "10.43"
        },
        "ap-south-1": {
          "RANGE": "10.44"
        },
        "ap-southeast-1": {
          "RANGE": "10.42"
        },
        "ap-southeast-2": {
          "RANGE": "10.43"
        },
        "ca-central-1": {
          "RANGE": "10.42"
        },
        "eu-central-1": {
          "RANGE": "10.42"
        },
        "eu-west-1": {
          "RANGE": "10.42"
        },
        "eu-west-2": {
          "RANGE": "10.43"
        },
        "sa-east-1": {
          "RANGE": "10.42"
        }
      },
      "SubnetTypeIpRanges": {
        "public": {
          "RANGE": "0.0/17"
        }
      },
      "publicSubnetConfig": {
        "publicSubnet01": {
          "CIDR": "10.0/24"
        },
        "publicSubnet02": {
          "CIDR": "11.0/24"
        }
      },
      "instancesTypes": {
        "Demo": {
          "INST": "t2.small"
        },
        "Prod": {
          "INST": "t2.2xlarge"
        }
      },
      "AWSInstanceType2Virt": {
        "t2.small": {
          "Virt": "HVM"
        }
      },
      "AWSInstanceType2EBSOpt": {
        "t2.small": {
          "EBSOpt": "false"
        }
      },
      "AWSRegionVirt2AMI": {
        "us-east-1": {
          "HVM": "ami-09479453c5cde9639"
        },
        "us-east-2": {
          "HVM": "ami-023c8dbf8268fb3ca"
        },
        "us-west-2": {
          "HVM": "ami-0bb5806b2e825a199"
        },
        "us-west-1": {
          "HVM": "ami-06ff511fea5db2c99"
        },
        "ap-northeast-1": {
          "HVM": "ami-2a69be4c"
        },
        "ap-northeast-2": {
          "HVM": "ami-9bec36f5"
        },
        "ap-south-1": {
          "HVM": "ami-4fc58420"
        },
        "ap-southeast-1": {
          "HVM": "ami-0797ea64"
        },
        "ap-southeast-2": {
          "HVM": "ami-8536d6e7"
        },
        "ca-central-1": {
          "HVM": "ami-fd55ec99"
        },
        "eu-central-1": {
          "HVM": "ami-c7ee5ca8"
        },
        "eu-west-1": {
          "HVM": "ami-acd005d5"
        },
        "eu-west-2": {
          "HVM": "ami-1a7f6d7e"
        },
        "sa-east-1": {
          "HVM": "ami-f1344b9d"
        }
      }
    },
    "Outputs": {
      "ALBName": {
        "Description": "The name of an ApplicationLoadBalancer",
        "Value": {
          "Fn::GetAtt": [
            "LB8A12904C",
            "LoadBalancerName"
          ]
        },
        "Export": {
          "Name": "albname"
        }
      },
      "S3bucket":{
        "Description":"The name of s3 bucket for CUR",
        "Value": {
          "Ref": "CURmaster"
        },
        "Export": {
          "Name": "s3bucket"
        }
      },
      "ALBDNS": {
        "Description": "The address of an ApplicationLoadBalancer",
        "Value": {
          "Fn::GetAtt": [
            "LB8A12904C",
            "DNSName"
          ]
        },
        "Export": {
          "Name": "albdnsaddress"
        }
      },
      "ASGName": {
        "Description": "The name of an Autoscaling group",
        "Value": {
          "Ref": "ASG46ED3070"
        },
        "Export": {
          "Name": "asgname"
        }
      },
      "RDSDNS": {
        "Description": "The address of RDS",
        "Value": {
          "Fn::GetAtt": [
            "InstanceC1063A87",
            "Endpoint.Address"
          ]
        },
        "Export": {
          "Name": "rdsaddress"
        }
      }
    },
    "Conditions": {
      "CDKMetadataAvailable": {
        "Fn::Or": [
          {
            "Fn::Or": [
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "ap-east-1"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "ap-northeast-1"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "ap-northeast-2"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "ap-south-1"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "ap-southeast-1"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "ap-southeast-2"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "ca-central-1"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "cn-north-1"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "cn-northwest-1"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "eu-central-1"
                ]
              }
            ]
          },
          {
            "Fn::Or": [
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "eu-north-1"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "eu-west-1"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "eu-west-2"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "eu-west-3"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "me-south-1"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "sa-east-1"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "us-east-1"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "us-east-2"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "us-west-1"
                ]
              },
              {
                "Fn::Equals": [
                  {
                    "Ref": "AWS::Region"
                  },
                  "us-west-2"
                ]
              }
            ]
          }
        ]
      }
    }
  }
